--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -1,4 +1,10 @@
 name: Hello World action
 on: workflow_dispatch
 
+jobs:
+    job1:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Hello World
+              run: echo "Hello, world!"
 
