--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -18,10 +18,28 @@ jobs:
 
       - name: Compile main.cpp
         run: |
-
+          CALL "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           WHERE cl.exe
           cl main.cpp /Fe:main.exe   # Fe - name of output file
-        shell: cmd # Použijeme 'cmd' shell, což je pro Windows často nejlepší pro MSVC příkazy
+        shell: cmd # smd or pwsh
+
+      - name: Check if compilation was successful
+        run: |
+          IF NOT EXIST main.exe (
+            ECHO Compilation failed!
+            EXIT /B 1
+          ) ELSE (
+            ECHO Compilation succeeded!
+          )
+        shell: cmd
+
+      - name: List files in current directory
+        run: dir
+        shell: cmd
+
+      - name: List files in current directory (PowerShell)
+        run: Get-ChildItem
+        shell: pwsh
 
       - name: Upload executable as artifact
         uses: actions/upload-artifact@v4
