--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           CALL "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           WHERE cl.exe
-          # Fe - name of output file
+          :: Fe - name of output file
           cl main.cpp /Fe:main.exe
         shell: cmd # smd or pwsh
 
