--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install msbuild # https://github.com/microsoft/setup-msbuild
         uses: microsoft/setup-msbuild@v2
         with:
-          vs-version: '2022' # Specify the version of Visual Studio to use or "latest" for the latest version
+          vs-version: 'latest' # Specify the version of Visual Studio to use or "latest" for the latest version
 
       - name: Compile main.cpp
         run: |
