--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -25,6 +25,10 @@ jobs:
         run: |
           echo %PATH%
 
+      - name: print dir of C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin
+        shell: cmd
+        run: |
+          dir "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin"
 
       - name: Print environment (PowerShell)
         shell: pwsh
