--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -5,6 +5,9 @@ on:
     tags: [build*]
   workflow_dispatch:
 
+env:
+  VC_VARS_PATH: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat
+
 jobs:
   build:
     runs-on: windows-latest
@@ -28,6 +31,7 @@ jobs:
       - name: run clrver
         shell: cmd
         run: |
+          CALL ${{ env.VC_VARS_PATH }} x64
           :: clrver.exe is part of the .NET SDK, which is pre-installed on Windows runners
           clrver
 
