--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -31,7 +31,7 @@ jobs:
       - name: run clrver
         shell: cmd
         run: |
-          CALL ${{ env.VC_VARS_PATH }} x64
+          CALL "${{ env.VC_VARS_PATH }}" x64
           :: clrver.exe is part of the .NET SDK, which is pre-installed on Windows runners
           clrver
 
