--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -34,6 +34,8 @@ jobs:
           CALL "${{ env.VC_VARS_PATH }}" x64
           :: clrver.exe is part of the .NET SDK, which is pre-installed on Windows runners
           clrver
+          :: signtool.exe is part of the Windows SDK, which is pre-installed on Windows runners
+          signtool /v
 
       - name: Find all exe in C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC
         shell: cmd
