--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -5,8 +5,8 @@ on:
     tags: [build*]
   workflow_dispatch:
 
-env:
-  VC_VARS_PATH: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat
+# env:
+#   VC_VARS_PATH: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat
 
 jobs:
   build:
@@ -22,6 +22,32 @@ jobs:
           vs-version: 'latest' # Specify the version of Visual Studio to use or "latest" for the latest version
           # vswhere-path: 'c:\msvc'
           # 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin' # Path to MSBuild
+
+      - name: Dynamically find vcvarsall.bat (PowerShell)
+        shell: pwsh
+        run: |
+
+          # Use vswhere.exe to find the path to the latest VS installation
+          $vsInstallPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -property installationPath
+
+          if (-not $vsInstallPath) {
+            Write-Error "Visual Studio installation path not found using vswhere.exe."
+            exit 1
+          }
+
+          # Construct the full path to vcvarsall.bat
+          $vcvarsallPath = Join-Path $vsInstallPath "VC\Auxiliary\Build\vcvarsall.bat"
+
+          if (-not (Test-Path $vcvarsallPath)) {
+            Write-Error "vcvarsall.bat not found at '$vcvarsallPath'."
+            exit 1
+          }
+
+          Write-Host "Found vcvarsall.bat at: $vcvarsallPath"
+
+          # You can save this path as an environment variable for subsequent steps
+          echo "VC_VARS_PATH=$vcvarsallPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
+
 
       - name: Print full PATH (cmd)
         shell: cmd
