--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -5,9 +5,6 @@ on:
     tags: [build*]
   workflow_dispatch:
 
-# this is hardcoded path to vcvarsall.bat - see later step of dynamically finding it
-# env:
-#   VC_VARS_PATH: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat
 
 jobs:
   build:
@@ -17,39 +14,58 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      # 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin' # Path to MSBuild
       - name: Install msbuild # https://github.com/microsoft/setup-msbuild
         uses: microsoft/setup-msbuild@v2
         with:
           vs-version: 'latest' # Specify the version of Visual Studio to use or "latest" for the latest version
-          # vswhere-path: 'c:\msvc'
-          # 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin' # Path to MSBuild
+
+
+
+      - name: Setup Git for Windows SDK # https://github.com/git-for-windows/setup-git-for-windows-sdk
+        uses: git-for-windows/setup-git-for-windows-sdk@v1
+        with:
+          flavor: minimal
+          # flavor: build-installers
+
 
       - name: Dynamically find vcvarsall.bat (PowerShell)
         id: find-vcvarsall
-        shell: pwsh
+        shell: bash
         run: |
 
-          # Use vswhere.exe to find the path to the latest VS installation
-          $vsInstallPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -property installationPath
+          #   $vsInstallPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -property installationPath
+          vsInstallPath = "${{ env.ProgramFiles(x86) }}/Microsoft Visual Studio/Installer/vswhere.exe"
+          echo "vsInstallPath: $vsInstallPath"
+          exit 1
 
-          if (-not $vsInstallPath) {
-            Write-Error "Visual Studio installation path not found using vswhere.exe."
-            exit 1
-          }
 
-          # Construct the full path to vcvarsall.bat
-          $vcvarsallPath = Join-Path $vsInstallPath "VC\Auxiliary\Build\vcvarsall.bat"
+      # - name: Dynamically find vcvarsall.bat (PowerShell)
+      #   id: find-vcvarsall
+      #   shell: pwsh
+      #   run: |
 
-          if (-not (Test-Path $vcvarsallPath)) {
-            Write-Error "vcvarsall.bat not found at '$vcvarsallPath'."
-            exit 1
-          }
+      #     # Use vswhere.exe to find the path to the latest VS installation
+      #     $vsInstallPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -property installationPath
 
-          Write-Host "Found vcvarsall.bat at: $vcvarsallPath"
+      #     if (-not $vsInstallPath) {
+      #       Write-Error "Visual Studio installation path not found using vswhere.exe."
+      #       exit 1
+      #     }
 
-          # You can save this path as an environment variable for subsequent steps
-          echo "VC_VARS_PATH=$vcvarsallPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          echo "VS_INSTALL_PATH=$vsInstallPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      #     # Construct the full path to vcvarsall.bat
+      #     $vcvarsallPath = Join-Path $vsInstallPath "VC\Auxiliary\Build\vcvarsall.bat"
+
+      #     if (-not (Test-Path $vcvarsallPath)) {
+      #       Write-Error "vcvarsall.bat not found at '$vcvarsallPath'."
+      #       exit 1
+      #     }
+
+      #     Write-Host "Found vcvarsall.bat at: $vcvarsallPath"
+
+      #     # You can save this path as an environment variable for subsequent steps
+      #     echo "VC_VARS_PATH=$vcvarsallPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      #     echo "VS_INSTALL_PATH=$vsInstallPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Print environment variables (cmd)
         shell: cmd
