--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -36,7 +36,7 @@ jobs:
 
           echo "-------------------------- 1"
           VSWHERE_EXE_PATH="/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere.exe"
-          $(VSWHERE_EXE_PATH)
+          $($VSWHERE_EXE_PATH)
 
           # -latest -products * -property installationPath)
           # | sed 's|\\|/|g')
