--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -34,15 +34,18 @@ jobs:
         shell: bash
         run: |
 
-          echo "-------------------------- 1"
-          VSWHERE_EXE_PATH="/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere.exe"
-          $( "${VSWHERE_EXE_PATH}" )
+          echo "---------------------------- 0"
+          VS_INSTALL_PATH=$( cmd.exe /c "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\Installer\\vswhere.exe\" -latest -products * -property installationPath" | sed 's|\\|/|g' )
+          echo "VS_INSTALL_PATH: $VS_INSTALL_PATH"
+
+          # echo "-------------------------- 1"
+          # VSWHERE_EXE_PATH="/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere.exe"
+          # $( "${VSWHERE_EXE_PATH}" )
 
           # -latest -products * -property installationPath)
           # | sed 's|\\|/|g')
-          echo "-------------------------- 2"
-          VS_INSTALL_PATH=$( "/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere.exe" -latest -products * -property installationPath | sed 's|\\|/|g' )
-          # VS_INSTALL_PATH=$(/c/"Program Files (x86)"/"Microsoft Visual Studio"/Installer/vswhere.exe -latest -products * -property installationPath | sed 's|\\|/|g')
+          # echo "-------------------------- 2"
+          # VS_INSTALL_PATH=$( "/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere.exe" -latest -products * -property installationPath | sed 's|\\|/|g' )
           echo "-------------------------- 3"
           echo "VS_INSTALL_PATH: $VS_INSTALL_PATH"
           exit 1
