--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -98,7 +98,7 @@ jobs:
         run: |
 
           # Set up the environment for Visual Studio
-          source "${{ env.VC_VARS_PATH }}" x64
+          cmd.exe /c /Q "${{ env.VC_VARS_PATH }}" x64
 
           # clrver.exe is part of the .NET SDK, which is pre-installed on Windows runners
           clrver
