--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -102,8 +102,21 @@ jobs:
           :: clrver.exe is part of the .NET SDK, which is pre-installed on Windows runners
           clrver
           :: signtool.exe is part of the Windows SDK, which is pre-installed on Windows runners
-          signtool /v
+          # signtool /v
 
+
+      - name: run clrver (PowerShell)
+        shell: pwsh
+        run: |
+
+          # Set up the environment for Visual Studio
+          & "${{ env.VC_VARS_PATH }}" x64
+
+          # clrver.exe is part of the .NET SDK, which is pre-installed on Windows runners
+          clrver
+
+          # signtool.exe is part of the Windows SDK, which is pre-installed on Windows runners
+          signtool /v
 
       - name: Print environment (PowerShell)
         shell: pwsh
