--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -113,10 +113,10 @@ jobs:
           & "${{ env.VC_VARS_PATH }}" x64
 
           # clrver.exe is part of the .NET SDK, which is pre-installed on Windows runners
-          clrver
+          clrver.exe
 
           # signtool.exe is part of the Windows SDK, which is pre-installed on Windows runners
-          signtool /v
+          signtool.exe /v
 
       - name: Print environment (PowerShell)
         shell: pwsh
