--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -212,7 +212,7 @@ jobs:
                   -FilePath "$fileToSign" `
                   -Certificate $cert ` # Use the certificate object we just generated
                   # -HashAlgorithm SHA256 ` # File digest algorithm
-                  -TimestampServer "$timestampServer" ` # Timestamp server URL
+                  # -TimestampServer "$timestampServer" ` # Timestamp server URL
                   -ErrorAction Stop # Important: Stops the script on any signing error
 
               Write-Host "File '$fileToSign' signed successfully using Set-AuthenticodeSignature."
