--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -175,14 +175,21 @@ jobs:
 
           Write-Host "Certificate generated with thumbprint: $($cert.Thumbprint)"
 
+          Write-Host "Certificate details:"
+          Get-ChildItem Cert:\CurrentUser\My -CodeSigningCert
+
+
           Write-Host "--- Step 2: Exporting Certificate to PFX File ---"
           # 2. Export the certificate with its private key to a PFX file
+          #   https://learn.microsoft.com/en-us/powershell/module/pki/export-pfxcertificate
           # -FilePath $pfxPath : Path for the PFX file
           # -Password $pfxPassword : Password for the PFX file
-          Export-PfxCertificate `
-              -Cert $cert `
-              -FilePath $pfxPath `
-              -Password $pfxPassword
+          $param = @{
+              Cert = $cert
+              FilePath = $pfxPath
+              Password = $pfxPassword
+          }
+          Export-PfxCertificate @param
 
           Write-Host "PFX file exported to: $pfxPath"
 
@@ -191,6 +198,7 @@ jobs:
           Write-Host "--- Step 2.5: Importing self-signed cert to Trusted Root Certification Authorities (LocalMachine) ---"
           # This is necessary for the system to trust the self-signed certificate for verification.
           try {
+              # https://learn.microsoft.com/en-us/powershell/module/pki/import-certificate
               # $cert | Import-Certificate -CertStoreLocation Cert:\LocalMachine\Root -ErrorAction Stop
               Import-Certificate -Filepath $cert -CertStoreLocation Cert:\LocalMachine\Root
               Write-Host "Certificate imported to LocalMachine\Root store."
@@ -204,12 +212,21 @@ jobs:
           Write-Host "--- Step 3: Signing the File using Set-AuthenticodeSignature ---"
           Write-Host "Signing file '$fileToSign' using Set-AuthenticodeSignature..."
           try {
-              Set-AuthenticodeSignature `
-                  -FilePath "$fileToSign" `
-                  -Certificate $cert  # Use the certificate object we just generated
-                  # -HashAlgorithm SHA256 ` # File digest algorithm
-                  # -TimestampServer "$timestampServer" ` # Timestamp server URL
-                  # -ErrorAction Stop # Important: Stops the script on any signing error
+              # Set-AuthenticodeSignature is used to sign the file with the generated certificate
+              # https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.security/set-authenticodesignature
+
+              $param = @{
+              FilePath = $fileToSign
+              Certificate = $cert  # Use the certificate object we just generated
+              }
+              Set-AuthenticodeSignature @param
+
+              # Set-AuthenticodeSignature `
+              #     -FilePath "$fileToSign" `
+              #     -Certificate $cert  # Use the certificate object we just generated
+              #     # -HashAlgorithm SHA256 ` # File digest algorithm
+              #     # -TimestampServer "$timestampServer" ` # Timestamp server URL
+              #     # -ErrorAction Stop # Important: Stops the script on any signing error
 
               Write-Host "File '$fileToSign' signed successfully using Set-AuthenticodeSignature."
           }
